--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "apollo-link-http": "^1.5.17",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "web-vitals": "^1.0.1"
@@ -46,5 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy" : "https://cryptic-peak-14681.herokuapp.com/"
+  "proxy": "https://cryptic-peak-14681.herokuapp.com/"
 }
